--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
              <a href="#inicio" class="flex items-center">
                 <div><img class="w-10 h-10 mr-3" viewBox="0 0 100 100" src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/Icono_Dissnet.png?v=1759423971" alt="Logo Dissnet"></div>
-                <h1 class="text-2xl font-bold text-white">Dissnet</h1>
+                <h1 class="text-2xl font-bold text-white">DissNet</h1>
             </a>
             <div class="hidden md:flex items-center space-x-1 lg:space-x-2 text-sm lg:text-base">
                 <a href="#inicio" data-key="nav-home" class="text-gray-300 hover:text-white transition-colors duration-300 px-3 py-2 rounded-md">Inicio</a>
