Correcion para nuevos logos de marcas

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
          <section>
              <div class="flex flex-wrap items-center mb-20 flex-row-reverse" data-aos="fade-up">
                     <div class="w-full md:w-1/2 px-4 mb-8 md:mb-0">
-                        <img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/oontz-clip.png?v=1740588156" alt="Imnagen de Speaker" class="rounded-lg product-image">
+                        <img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/71yLyiSmJRL._UF894_1000_QL80.jpg?v=1759794953" alt="Imnagen de Speaker" class="rounded-lg product-image">
                     </div>
                     <div class="w-full md:w-1/2 px-4">
                         <h4 class="text-2xl font-bold mb-2 section-title" data-key="speakers-section-title">Speakers y Earbuds</h4>
@@ -508,8 +508,14 @@
                         <h4 data-key="brands-cat-signage" class="text-xl font-bold text-center mb-6 text-gray-700 dark:text-gray-300">Digital Signage</h4>
                         <div class="brands-carousel-container">
                             <div class="brands-track">
-                                <span class="brand-name text-gray-500 dark:text-gray-400">Dissled</span><span class="brand-name text-gray-500 dark:text-gray-400">Distouch</span><span class="brand-name text-gray-500 dark:text-gray-400">ViewSonic</span><span class="brand-name text-gray-500 dark:text-gray-400">Samsung</span>
-                                <span class="brand-name text-gray-500 dark:text-gray-400">Dissled</span><span class="brand-name text-gray-500 dark:text-gray-400">Distouch</span><span class="brand-name text-gray-500 dark:text-gray-400">ViewSonic</span><span class="brand-name text-gray-500 dark:text-gray-400">Samsung</span>
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/Dissled.png?v=1751930653" alt="Dissled" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/DISSTOUCH.png?v=1751930655" alt="DISSTOUCH" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/viewsonic.png?v=1751926075" alt="ViewSonic" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/samsung.png?v=1740492174" alt="Samsung" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/Dissled.png?v=1751930653" alt="Dissled" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/DISSTOUCH.png?v=1751930655" alt="DISSTOUCH" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/viewsonic.png?v=1751926075" alt="ViewSonic" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/samsung.png?v=1740492174" alt="Samsung" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
                             </div>
                         </div>
                     </div>
@@ -518,8 +524,12 @@
                         <h4 data-key="brands-cat-video" class="text-xl font-bold text-center mb-6 text-gray-700 dark:text-gray-300">Videoconferencias</h4>
                         <div class="brands-carousel-container">
                            <div class="brands-track">
-                                <span class="brand-name text-gray-500 dark:text-gray-400">Logitech</span><span class="brand-name text-gray-500 dark:text-gray-400">Yealink</span><span class="brand-name text-gray-500 dark:text-gray-400">Jabra GN</span>
-                                <span class="brand-name text-gray-500 dark:text-gray-400">Logitech</span><span class="brand-name text-gray-500 dark:text-gray-400">Yealink</span><span class="brand-name text-gray-500 dark:text-gray-400">Jabra GN</span>
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/yealink.png?v=1751926102" alt="yealink" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/LOGITEC.png?v=1741646774" alt="logitech" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/jabra.png?v=1759799393" alt="jabra" class="w-48 h-auto rounded-lg product-image"></span> 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/yealink.png?v=1751926102" alt="yealink" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/LOGITEC.png?v=1741646774" alt="logitech" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp;
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/jabra.png?v=1759799393" alt="jabra" class="w-48 h-auto rounded-lg product-image"></span> 
                             </div>
                         </div>
                     </div>
@@ -528,8 +538,14 @@
                         <h4 data-key="brands-cat-network" class="text-xl font-bold text-center mb-6 text-gray-700 dark:text-gray-300">Networking y Cómputo</h4>
                         <div class="brands-carousel-container">
                            <div class="brands-track">
-                                <span class="brand-name text-gray-500 dark:text-gray-400">HPE Aruba</span><span class="brand-name text-gray-500 dark:text-gray-400">Grandstream</span><span class="brand-name text-gray-500 dark:text-gray-400">Lenovo</span><span class="brand-name text-gray-500 dark:text-gray-400">HP</span><span class="brand-name text-gray-500 dark:text-gray-400">Dell</span><span class="brand-name text-gray-500 dark:text-gray-400">Targus</span>
-                                <span class="brand-name text-gray-500 dark:text-gray-400">HPE Aruba</span><span class="brand-name text-gray-500 dark:text-gray-400">Grandstream</span><span class="brand-name text-gray-500 dark:text-gray-400">Lenovo</span><span class="brand-name text-gray-500 dark:text-gray-400">HP</span><span class="brand-name text-gray-500 dark:text-gray-400">Dell</span><span class="brand-name text-gray-500 dark:text-gray-400">Targus</span>
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/Hpe-aruba-networking-logo.svg?v=1751925934" alt="HPE" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/Grandstream-logo-for-web_png.webp?v=1759802080" alt="Grandstream" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/lenovo.png?v=1751925918" alt="Lenovo" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/dell.png?v=1751925897" alt="Dell" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/Hpe-aruba-networking-logo.svg?v=1751925934" alt="HPE" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/Grandstream-logo-for-web_png.webp?v=1759802080" alt="Grandstream" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/lenovo.png?v=1751925918" alt="Lenovo" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
+                                <span><img src="https://cdn.shopify.com/s/files/1/0687/2966/7739/files/dell.png?v=1751925897" alt="Dell" class="w-48 h-auto rounded-lg product-image"></span> &nbsp;&nbsp; &nbsp;&nbsp; 
                             </div>
                         </div>
                     </div>
